# st_cardplus

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml  pr-check.yml  release-tag.yml
public/: _headers  did-you-know.json
scripts/: generate-iconify-bundle.mjs  set-version.mjs
src/: App.vue  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/handler/: mod.rs  system_service.rs
src/components/: CardManager.vue  CharacterInfoEditor.vue  SystemBanner.vue  WorldBook.vue  WorldEditor.vue
src/components/cardManager/: CardEditor.vue
src/components/charcard/: CharacterListSidebar.vue  (+1 more)
src/composables/: appSettings.ts  useAppUpdate.ts  useNavigation.ts  usePersonalization.ts  useUmamiTelemetry.ts
src/config/: menuConfig.ts
src/css/: card-manager-panels.css  worldbook.css  worldeditor.css
src/database/: characterCardService.ts  db.ts  utils.ts  worldBookService.ts
src/pages/: About.vue  CardPage.vue  EjsEditorPage.vue  HomePage.vue  Preset.vue  ToolboxPage.vue
src/router/: index.ts
src/styles/: split-create-actions.css
src/types/: character.ts  openai-preset.ts  png-modules.d.ts  shims-splitpanes.d.ts  worldbook.ts
src/utils/: chineseConverter.ts  externalLink.ts  imageHosting.ts  jsonlNovelConverter.ts  localStorageUtils.ts  multiValuePaste.ts  pngCardMetadata.ts  useImageHosting.ts  worldBookConverter.ts
(+105 files in other folders)
