[package]
name = "st_cardplus"
version = "0.1.20"
description = "SillyTavern CardPlus desktop app"
authors = ["awaae001"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
thiserror = "2"
rfd = "0.17.2"
log = "0.4"
env_logger = "0.11.9"
